--- a/src/zopt.ggo.in
+++ b/src/zopt.ggo.in
@@ -105,6 +105,9 @@ section "IPv6"
 option "ipv6-target-file"            - "File containing IPv6 addresses to be scanned, use '-' for stdin"
     typestr="filename"
     optional string
+option "ipv6-target-prefix"            - "IPv6 prefix to be scanned"
+    typestr="name"
+    optional string
 option "ipv6-source-ip"              - "Source address(es) for scan packets"
     typestr="name"
     optional string
